# every-eval-ever-pipeline

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
api/: __init__.py  main.py
data/: backend.duckdb
data/simulated/public_leaderboards/: aggregate_rows_200.jsonl  manifest.json
data/simulated/test_fixtures/: manifest.json
data/simulated/test_fixtures/baseline/data/global-mmlu-lite/alibaba/qwen3-235b-a22b-instruct-2507/: 879c853a-49a7-476d-82fd-4b280c3dbfac.json  879c853a-49a7-476d-82fd-4b280c3dbfac.jsonl
data/simulated/test_fixtures/baseline/data/reward-bench/0-hero/Matter-0.1-7B-DPO-preview/: 4de942ab-46f7-4ad4-9125-8d94f80d9432.json  4de942ab-46f7-4ad4-9125-8d94f80d9432.jsonl
data/simulated/test_fixtures/pathology/data/hfopenllm_v2/0-hero/Matter-0.2-7B-DPO/: 94c617b0-add0-4155-97d9-4f0edebd3e9f.jsonl
docs/: query_api_system_design.md
shared/: __init__.py  config.py  constants.py  duckdb_backend.py
tests/: test_duckdb_backend.py
tmp/test_fixtures/baseline/data/hfopenllm_v2/0-hero/Matter-0.2-7B-DPO/: 5ffac35b-bc8d-4125-8a62-42e293dc5d53.json  5ffac35b-bc8d-4125-8a62-42e293dc5d53.jsonl
tmp/test_fixtures/pathology/data/global-mmlu-lite/alibaba/qwen3-235b-a22b-instruct-2507/: add6776a-39ab-4ea9-a062-a4708a202d1b.json  add6776a-39ab-4ea9-a062-a4708a202d1b.jsonl
tmp/test_fixtures/pathology/data/hfopenllm_v2/0-hero/Matter-0.2-7B-DPO/: 94c617b0-add0-4155-97d9-4f0edebd3e9f.json
tools/sim_data/: generate_backend_sim_data.py  generate_public_leaderboard_sample.py
worker/: __init__.py  main.py
(+2 files in other folders)
